--- a/Lx.Benchmark/Lx.Benchmark.csproj
+++ b/Lx.Benchmark/Lx.Benchmark.csproj
@@ -1,20 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CC77B4C5-7CEE-4A91-8740-BAD13855ACDD}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{B78C29DA-0453-4A76-A86C-F278DD30814C}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DynamicUsage</RootNamespace>
-    <AssemblyName>DynamicUsage</AssemblyName>
+    <RootNamespace>Lx.Benchmark</RootNamespace>
+    <AssemblyName>Lx.Benchmark</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,48 +31,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Benchmarks\ClassCall.cs" />
-    <Compile Include="Benchmarks\DelegateCall.cs" />
-    <Compile Include="Benchmarks\DynamicCall.cs" />
-    <Compile Include="Benchmarks\DynamicMethodCall.cs" />
-    <Compile Include="Benchmarks\ExpressionCall.cs" />
-    <Compile Include="Benchmarks\ExtensionMethodCall.cs" />
-    <Compile Include="Benchmarks\GenericMethodCall.cs" />
-    <Compile Include="Data\IInvoker.cs" />
-    <Compile Include="Benchmarks\InterfaceCall.cs" />
-    <Compile Include="Data\MyAnotherClass.cs" />
-    <Compile Include="Data\MyBaseClass.cs" />
-    <Compile Include="Data\MyClass.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="BenchmarkResult.cs" />
+    <Compile Include="BenchmarkRunner.cs" />
+    <Compile Include="IBenchmark.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Benchmarks\MethodInfoCall.cs" />
-    <Compile Include="Benchmarks\VisitorCall.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="TextFile1.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Lx.Benchmark\Lx.Benchmark.csproj">
-      <Project>{b78c29da-0453-4a76-a86c-f278dd30814c}</Project>
-      <Name>Lx.Benchmark</Name>
-    </ProjectReference>
+    <Compile Include="ResultComparer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
