--- a/SplitString/SplitString.csproj
+++ b/SplitString/SplitString.csproj
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CC77B4C5-7CEE-4A91-8740-BAD13855ACDD}</ProjectGuid>
+    <ProjectGuid>{2BF1D90B-5507-4AB5-9B31-88E857565749}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DynamicUsage</RootNamespace>
-    <AssemblyName>DynamicUsage</AssemblyName>
+    <RootNamespace>SplitString</RootNamespace>
+    <AssemblyName>SplitString</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -43,36 +44,25 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Benchmarks\ClassCall.cs" />
-    <Compile Include="Benchmarks\DelegateCall.cs" />
-    <Compile Include="Benchmarks\DynamicCall.cs" />
-    <Compile Include="Benchmarks\DynamicMethodCall.cs" />
-    <Compile Include="Benchmarks\ExpressionCall.cs" />
-    <Compile Include="Benchmarks\ExtensionMethodCall.cs" />
-    <Compile Include="Benchmarks\GenericMethodCall.cs" />
-    <Compile Include="Data\IInvoker.cs" />
-    <Compile Include="Benchmarks\InterfaceCall.cs" />
-    <Compile Include="Data\MyAnotherClass.cs" />
-    <Compile Include="Data\MyBaseClass.cs" />
-    <Compile Include="Data\MyClass.cs" />
+    <Compile Include="Benchmarks\RegexCompiledToAssemblySplitLines.cs" />
+    <Compile Include="Benchmarks\StringGenerator.cs" />
+    <Compile Include="Benchmarks\StringSplitLines.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Benchmarks\MethodInfoCall.cs" />
-    <Compile Include="Benchmarks\VisitorCall.cs" />
+    <Compile Include="Benchmarks\RegexCompiledSplitLines.cs" />
+    <Compile Include="Benchmarks\RegexSplitLines.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TextFile1.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Lx.Benchmark\Lx.Benchmark.csproj">
-      <Project>{b78c29da-0453-4a76-a86c-f278dd30814c}</Project>
+      <Project>{B78C29DA-0453-4A76-A86C-F278DD30814C}</Project>
       <Name>Lx.Benchmark</Name>
     </ProjectReference>
   </ItemGroup>
