Add Visitor Pattern for https://stackoverflow.com/questions/32933122/implementing-visitor-pattern-in-c-sharp/34441836#34441836

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@
 /ipch/METHODCONTAINER-1cb696a3/*.ipch
 /*.opendb
 /*.sdf
+/.vs
+VisitorPattern/bin
+VisitorPattern/obj
+VisitorPatternParser/bin
+VisitorPatternParser/obj
